[metadata]
name = pigeonpost
version = 0.3.0
description = Simple to use Web Framework
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
packages = find:
python_requires = >=3.11
install_requires =
    jinja2

[options.entry_points]
console_scripts =
    pigeon = pigeon.scripts:execute